# physics-1

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .ninja_log  CHANGELOG.md  CMakeLists.txt  Containerfile  INITIAL_ASSESSMENT.md  Makefile  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  build.ninja  build.py  build.sh  configure.py  devenv.nix  flake.nix  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: clang-format.yaml  clang-tidy.yaml  ruff-format.yaml  ruff-lint.yaml  test.yaml  wheels.yaml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hello_test  hello_test[1]_include.cmake  hello_test[1]_tests.cmake  linalg_test  linalg_test[1]_include.cmake  linalg_test[1]_tests.cmake
_codeql_build_dir/python/: Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
_codeql_build_dir/src/example/: Makefile  cmake_install.cmake
_codeql_build_dir/src/linalg/: Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  hello_test  hello_test[1]_include.cmake  hello_test[1]_tests.cmake  linalg_test  linalg_test[1]_include.cmake  linalg_test[1]_tests.cmake
docs/: ADDING_CPP_TESTS.md  README.md  build-architecture.md  build-flow-diagrams.md  faq-and-troubleshooting.md
examples/: projectile_motion.py
inc/example/: example_bindings.h  functions.h  functions_bindings.h
inc/linalg/: vector.h
inc/math/: constants.h  math_bindings.h
inc/math/linalg/: linalg_bindings.h  vector.h  vector_bindings.h
inc/physics/kinematics/: motion.h
notes/: 1-kinematics.typ
notes/week-1/: kinematics.typ
python/: CMakeLists.txt  main.cpp
python/phys/: __init__.py  __init__.pyi  _core.pyi
python/phys/example/: CMakeLists.txt  __init__.py  __init__.pyi  example_bindings.cpp  main.cpp
python/phys/example/_example/: __init__.pyi  functions.pyi
python/phys/math/: CMakeLists.txt  __init__.py  __init__.pyi  main.cpp
python/phys/math/_math/: __init__.pyi
python/phys/math/linalg/: __init__.py  __init__.pyi  vector_bindings.cpp
python/physics_1/: __init__.py  __init__.pyi  _core.pyi  example.pyi  linalg.pyi
python/physics_1/_core/: __init__.py  __init__.pyi  linalg.pyi
python/physics_1/example/: CMakeLists.txt  __init__.py  __init__.pyi  example_bindings.cpp  functions.py  main.cpp
python/physics_1/example/_example/: __init__.pyi  functions.pyi
python/physics_1/math/: CMakeLists.txt  __init__.py  __init__.pyi  constants.py  main.cpp  math_bindings.cpp
python/physics_1/math/_math/: __init__.pyi
python/physics_1/math/linalg/: __init__.py  __init__.pyi  linalg_bindings.cpp  vector.py  vector_bindings.cpp
src/: CMakeLists.txt  functions.cpp  kinematics.cpp  main.cpp
src/example/: CMakeLists.txt  example.cpp  functions.cpp
src/linalg/: CMakeLists.txt  vector.cpp
src/math/: CMakeLists.txt
src/math/linalg/: CMakeLists.txt  linalg.cpp  vector.cpp
src/physics_1/: __init__.py  __init__.pyi
tests/: CMakeLists.txt  test_kinematics.py  test_main.py
tests/cpp/: test_example.cpp  test_kinematics.cpp  test_linalg.cpp
tests/python/: test_example.py  test_linalg.py  test_package_structure.py
