[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "physics_1"
version = "0.1.0"
description = "My adventure learning phyiscs 1 from the ground up"
readme = "README.md"
authors = [{ name = "Justin Hoang", email = "justinhoang@sua.sh" }]
requires-python = ">=3.12"
dependencies = ["numpy>=2.3.4"]

[project.optional-dependencies]
dev = ["ruff>=0.14.3", "pytest>=8.4.2", "ipython>=6.0.1", "build>=1.3.0"]

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
