[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "physics_1"
version = "0.1.0"
description = "My adventure learning physics 1 from the ground up"
readme = "README.md"
authors = [{ name = "Justin Hoang", email = "justinhoang@sua.sh" }]
requires-python = ">=3.13"
dependencies = ["numpy>=2.3.4"]

[dependency-groups]
build = ["build>=1.3.0", "pybind11-stubgen>=2.5.5"]
dev = ["ruff>=0.14.3", "ipython>=6.0.1"]
test = ["pytest>=8.4.2", "pytest-cov>=7.0.0", "gcovr>=8.0"]

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
